--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/velorution/apicontact#readme",
   "dependencies": {
-    "nodemailer": "^6.9.0"
+    "auth0": "^3.1.2",
+    "dotenv": "^16.0.3",
+    "express-jwt": "^8.3.0",
+    "nodemailer": "^6.9.0",
+    "sendinblue-api": "^1.0.8"
   }
 }
