--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "express-jwt": "^8.3.0",
     "nodemailer": "^6.9.0",
-    "sendinblue-api": "^1.0.8"
+    "sendinblue-api": "^1.0.8",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
