--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "auth0": "^3.1.2",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-jwt": "^8.3.0",
     "nodemailer": "^6.9.0",
     "sendinblue-api": "^1.0.8",
