--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.3.0",
     "nodemailer": "^6.9.0",
+    "passport-localapikey": "^0.0.3",
     "sendinblue-api": "^1.0.8",
     "sib-api-v3-sdk": "^8.5.0"
   }
